# convnet

./: .editorconfig  .gitignore  .gitmodules  Convnet.sln  README.md  build.cmd  build.sh  global.json
Convnet/: App.axaml  App.axaml.cs  App.config  Convnet.csproj  Convnet.sln  Interop.cs  Program.cs  Settings.Extensions.cs
Convnet/Assets/: CSharp-Mode.xshd  Definition.xshd  shared.axaml
Convnet/Common/: ApplicationHelper.cs  Attached.cs  Behavior.cs  Behaviors.cs  CodeEditor.cs  DefinitionEditor.cs  FormattedTextBlock.cs  ProcessUtils.cs  ScriptEditor.cs
Convnet/Converters/: Converters.cs
Convnet/Convnet/: App.axaml  App.config  Interop.cs  Program.cs  Settings.Extensions.cs  ViewLocator.cs  app.manifest
Convnet/Convnet/Common/: Attached.cs  CodeEditor.cs  RangeRule.cs
Convnet/Convnet/Converters/: Converters.cs
Convnet/Convnet/Dialogs/: TestParameters.axaml  TestParameters.axaml.cs
Convnet/Convnet/PageViewModels/: EditPageViewModel.cs  PageViewModelBase.cs  TestPageViewModel.cs  TrainPageViewModel.cs
Convnet/Convnet/PageViews/: EditPageView.axaml.cs  MainWindow.axaml  PageView.axaml  TestPageView.axaml  TestPageView.axaml.cs
Convnet/Convnet/Properties/: launchSettings.json
Convnet/Convnet/Resources/state/: resnet-3-2-6-channelzeropad-relu.txt
Convnet/Dialogs/: TestParameters.axaml  TestParameters.axaml.cs  TrainParameters.axaml  TrainParameters.axaml.cs
Convnet/PageViewModels/: EditPageViewModel.cs  MainWindowViewModel.cs  PageViewModel.cs  PageViewModelBase.cs  TestPageViewModel.cs  TrainPageView.axaml.cs  TrainPageViewModel.cs
Convnet/PageViews/: EditPageView.axaml  EditPageView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  PageView.axaml  PageView.axaml.cs  TestPageView.axaml  TestPageView.axaml.cs  TrainPageView.axaml  TrainPageView.axaml.cs
Convnet/Properties/: Settings.Designer.cs  Settings.settings
Convnet/Resources/: shared.axaml
Convnet/Resources/state/: resnet-3-2-6-channelzeropad-relu.txt
CustomMessageBox.Avalonia/: Directory.Build.props
CustomMessageBox.Avalonia/CustomMessageBox.Avalonia/: CustomMessageBox.Avalonia.csproj  MessageBox.axaml  MessageBox.axaml.cs  MessageBoxButton.cs  MessageBoxButtons.cs  MessageBoxDefaultButton.cs  MessageBoxIcon.cs  MessageBoxResult.cs  SpecialButtonRole.cs
CustomMessageBox.Avalonia/CustomMessageBox.Avalonia.Demo/: CustomMessageBox.Avalonia.Demo.csproj
OxyPlot.Avalonia/Source/: Directory.Build.props  OxyPlot.Avalonia.sln
OxyPlot.Avalonia/Source/OxyPlot.Avalonia/: OxyPlot.Avalonia.csproj  PlotBase.cs
Scripts/: Program.cs  Scripts.csproj  Scripts.sln
ToolBarControls.Avalonia/: NuGet.Config  README.md  ToolBarControls.Avalonia.sln  global.json
ToolBarControls.Avalonia/src/ToolBarControls.Avalonia/: OverflowMode.cs  ToolBarControls.Avalonia.csproj
ToolBarControls.Avalonia/src/ToolBarControls.Avalonia.Demo/: App.axaml  App.axaml.cs  Program.cs  ToolBarControls.Avalonia.Demo.csproj  ViewLocator.cs  app.manifest
ToolBarControls.Avalonia/src/ToolBarControls.Avalonia.Demo/Helpers/: ControlHelper.cs
ToolBarControls.Avalonia/src/ToolBarControls.Avalonia.Demo/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
ToolBarControls.Avalonia/src/ToolBarControls.Avalonia.Demo/ViewModels/Items/: CustomItemViewModel.cs
ToolBarControls.Avalonia/src/ToolBarControls.Avalonia.Demo/ViewModels/Tabs/: ToolBarTabViewModel.cs  ToolBarTrayTabViewModel.cs
ToolBarControls.Avalonia/src/ToolBarControls.Avalonia.Demo/ViewModels/ToolBars/: ToolBarTrayViewModel.cs  ToolBarViewModel.cs
ToolBarControls.Avalonia/src/ToolBarControls.Avalonia.Demo/Views/: MainWindow.axaml  MainWindow.axaml.cs
ToolBarControls.Avalonia/src/ToolBarControls.Avalonia.Demo/Views/Items/: CustomItemView.axaml  CustomItemView.axaml.cs
ToolBarControls.Avalonia/src/ToolBarControls.Avalonia/Controls/: ToolBar.Properties.cs  ToolBar.cs  ToolBarOverflowPanel.Properties.cs  ToolBarOverflowPanel.cs  ToolBarPanel.Properties.cs  ToolBarPanel.cs  ToolBarThumb.Events.cs  ToolBarThumb.cs  ToolBarTray.Properties.cs  ToolBarTray.cs
ToolBarControls.Avalonia/src/ToolBarControls.Avalonia/Events/: ToolBarVectorEventArgs.cs
ToolBarControls.Avalonia/src/ToolBarControls.Avalonia/Themes/: ToolBarControls.Avalonia.axaml
ToolBarControls.Avalonia/src/ToolBarControls.Avalonia/Utils/: DoubleUtil.cs
dnn/: Add.h  BatchNormActivationDropout.h  CMakeLists.txt  ChannelSplit.h  ConvolutionTranspose.h  CsvFile.h  Dataprovider.h  Divide.h  DropPathAdd.h  Dropout.h  LayerNorm.h  Model.h  Multiply.h  PRelu.h  ParallelFor.h  Reduction.h  Substract.h  build.cmd  build.sh  dnn.vcxproj  dnn.vcxproj.filters  zlib.props
dnn/cmake/: DownloadCSVParser.cmake  DownloadJPEG.cmake  DownloadMimalloc.cmake  DownloadOneDNN.cmake  DownloadPNG.cmake  DownloadVectorClass.cmake  DownloadZLIB.cmake
dnn/dnn/: .gitignore  CMakeLists.txt  build.cmd  build.sh
dnn/dnn/cmake/: DownloadBitsery.cmake  DownloadCImg.cmake  DownloadMagicEnum.cmake  DownloadPNG.cmake  DownloadZLIB.cmake
dnn/dnn/include/: AlignedAllocator.h  ChannelZeroPad.h  Convolution.h  Cost.h  Definition.h  Divide.h  DropPathAdd.h  GlobalMaxPooling.h  GroupNorm.h  Layer.h  LogSoftmax.h  Min.h  Multiply.h  Scripts.h  Shuffle.h  Softmax.h  targetver.h
dnn/dnn/src/: dllmain.cpp  stdafx.cpp  test.cpp
dnn/include/: Activation.h  Add.h  AlignedAllocator.h  Average.h  AvgPooling.h  BatchNorm.h  BatchNormActivation.h  BatchNormActivationDropout.h  BatchNormRelu.h  ChannelSplit.h  ChannelSplitRatioLeft.h  ChannelSplitRatioRight.h  ChannelZeroPad.h  Concat.h  Convolution.h  ConvolutionTranspose.h  Cost.h  Dataprovider.h  Definition.h  Dense.h  DepthwiseConvolution.h  Divide.h  DropPathAdd.h  Dropout.h  GlobalAvgPooling.h  GlobalMaxPooling.h  GroupNorm.h  Image.h  Input.h  Layer.h  LayerNorm.h  LocalResponseNorm.h  LogSoftmax.h  Max.h  MaxPooling.h  Min.h  Model.h  Multiply.h  PRelu.h  ParallelFor.h  (+11 more)
dnn/src/: dllmain.cpp  fast_memcmp.c  fast_memcpy.c  fast_memmove.c  fast_memset.c  memset.c  test.cpp
dnn/test/bachnormactivation/: smoke.cc
dnn/test/testers/: batchnormactivation.h
(+5 files in other folders)
